# GenEd_Firmware-

./: .gitignore  CMakeLists.txt  README.md  performance_report.md
.github/workflows/: host-tests.yml
docs/: API_CONTRACTS.md  ARCHITECTURE.md  GAPS.md  Memory_Budget.md  PRODUCTION_READINESS.md  RUNBOOK.md  STATE_DEVICE_LIFECYCLE.md  state_connectivity.md  state_ota.md  state_power.md
firmware/app_runtime/: main.cpp
firmware/connectivity/: connectivity.cpp  connectivity.h
firmware/diagnostics/: diagnostics.cpp  diagnostics.h
firmware/event_runtime/: event.h  event_queue.cpp  event_queue.h
firmware/hal/esp32/: hal_esp32.h
firmware/hal/include/: hal.h
firmware/hal/sim/: hal_sim.cpp  hal_sim.h
firmware/ota/: ota.cpp  ota.h
firmware/power/: power_manager.cpp  power_manager.h
firmware/rules_engine/: rules_engine.cpp  rules_engine.h
firmware/ui/: ui.h
tests/: test_event_queue.cpp  test_mock_server.py  test_modules.cpp  test_placeholder.md  test_scenarios.cpp
tools/: mock_server.py  sim_runner.py
